--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "core-js": "^3.6.5",
     "firebase": "^8.1.1",
     "vue": "^2.6.11",
-    "vue-router": "^3.4.9"
+    "vue-radial-menu": "^1.1.1",
+    "vue-router": "^3.4.9",
+    "vue-simple-alert": "^1.1.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
