--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@lbzui/vue": "^0.8.0",
     "core-js": "^3.6.5",
     "firebase": "^8.1.1",
     "vue": "^2.6.11",
